--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "release": "npm run clean && npm run build && abtnode bundle --create-release",
+    "deploy": "npm run release && abtnode deploy .blocklet/bundle"	
   },
   "files": [
     "public"
