--- a/blocklet.yml
+++ b/blocklet.yml
@@ -1,6 +1,6 @@
 name: gatsby-demo
 description: A static blocklet powered by Gatsby
-version: 1.0.2
+version: 1.0.3
 author:
   name: ArcBlock
 license: MIT
@@ -17,7 +17,7 @@ main: public
 title: Gatsby Demo
 scripts:
   dev: npm run start
-specVersion: 1.1.1
+specVersion: 1.2.0
 did: z8iZjXmmsTbsZc8sJHxgojwFqTU7wpe19mXBi
 community: ''
 documentation: ''
@@ -37,9 +37,9 @@ requirements:
   abtnode: '>=1.1.0'
   os: '*'
   cpu: '*'
-charging:
-  price: 0
-  tokens: []
-  shares: []
+payment:
+  price: []
+  share: []
 children: []
-capabilities: {}
+capabilities:
+  clusterMode: false
